--- a/Desarrollo Web en Entorno Cliente/Curso JS Domestika/Ejercicio 3.1/index.html
+++ b/Desarrollo Web en Entorno Cliente/Curso JS Domestika/Ejercicio 3.1/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css?family=Archivo|Archivo+Narrow:600"
       rel="stylesheet"
     />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="css/3.css" rel="stylesheet" />
+    <link href="site.css" rel="stylesheet" />
+    <link href="3.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -25,6 +25,6 @@
       <button type="submit">Enviar</button>
     </form>
 
-    <script src="js/javascript.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
