--- a/Diseño Interfaces Web/Enunciado1_Tablas/redesSociales_tabla.html
+++ b/Diseño Interfaces Web/Enunciado1_Tablas/redesSociales_tabla.html
@@ -18,8 +18,8 @@
       <tr align="center">
         <td rowspan="2"><b>Facebook</b></td>
         <td rowspan="2"><img src="1352718801_FacebookShop.png" /></td>
-        <td class="cuenta" rowspan="2"></td>
-        <td valign="top">
+        <td  rowspan="2"></td>
+        <td valign="top" width="180px">
           <img src="star-4.png" /><img src="star-4.png" /><img
             src="star-2.png"
           /><img src="star-0.png" /><img src="star-0.png" />
@@ -29,14 +29,14 @@
         </td>
       </tr>
       <tr>
-        <td class="valor" align="center">2.5 / 5</td>
+        <td align="center" height="80px">2.5 / 5</td>
       </tr>
 
       <tr align="center">
         <td rowspan="2"><b>Flickr</b></td>
         <td rowspan="2"><img src="1352718827_flickrshop.png" /></td>
         <td rowspan="2"></td>
-        <td valign="top">
+        <td valign="top" width="180px">
           <img src="star-4.png" /><img src="star-4.png" /><img
             src="star-4.png"
           /><img src="star-4.png" /><img src="star-1.png" />
@@ -47,14 +47,14 @@
         </td>
       </tr>
       <tr>
-        <td align="center">4.25/5</td>
+        <td align="center" height="80px">4.25/5</td>
       </tr>
 
       <tr align="center">
         <td rowspan="2"><b>Vimeo</b></td>
         <td rowspan="2"><img src="1352718818_vimeoshop.png" /></td>
         <td rowspan="2"></td>
-        <td valign="top">
+        <td valign="top" width="180px">
           <img src="star-0.png" /><img src="star-0.png" /><img
             src="star-0.png"
           /><img src="star-0.png" /><img src="star-0.png" />
@@ -64,15 +64,15 @@
         </td>
       </tr>
       <tr>
-        <td align="center">Sin valor todavía</td>
+        <td align="center" height="80px">Sin valor todavía</td>
       </tr>
 
-      <tr align="center" width="120px">
+      <tr align="center" >
         <td rowspan="2"><b>Youtube</b></td>
         <td rowspan="2"><img src="1352718809_youtube_shop.png" /></td>
         <td rowspan="2"></td>
 
-        <td valign="top">
+        <td valign="top" width="180px">
           <img src="star-4.png" /><img src="star-4.png" /><img
             src="star-3.png"
           /><img src="star-0.png" /><img src="star-0.png" />
@@ -81,8 +81,8 @@
           <a href="https://www.youtube.com">https://www.youtube.com</a>
         </td>
       </tr>
-      <tr align="center" height="50px">
-        <td>2.5/5</td>
+      <tr align="center" >
+        <td height="80px">2.5/5</td>
       </tr>
     </table>
   </body>
