--- a/Desarrollo Web en Entorno Cliente/Tema_2/Funciones/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_2/Funciones/index.html
@@ -10,6 +10,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./utils/js/index.js"></script> <!--Al final siempre dle body-->
+    <!-- <script src="./utils/js/index.js"></script>  --><!--Al final siempre dle body-->
+    <script src="./utils/js/arrays.js"></script> <!--Al final siempre dle body-->
     </body>
 </html>
