--- a/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicios_Base/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicios_Base/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+
+
+
+    </style>
 </head>
 <body>
 
@@ -11,6 +18,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="./utils/js/index.js"></script>  --><!--Al final siempre dle body-->
-    <script src="./ejercicio_5.js"></script> <!--Al final siempre dle body-->
+    <script src="./ejercicio_6.js"></script> <!--Al final siempre dle body-->
     </body>
 </html>
