--- a/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicios_Base/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicios_Base/index.html
@@ -18,6 +18,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="./utils/js/index.js"></script>  --><!--Al final siempre dle body-->
-    <script src="./ejercicio_7.js"></script> <!--Al final siempre dle body-->
+    <script src="../Ejercicio_Arrays/ejercicio_1.js"></script> <!--Al final siempre dle body-->
     </body>
 </html>
