--- a/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicio_Arrays/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_2/Ejercicio_Arrays/index.html
@@ -6,7 +6,7 @@
     <title>Baraja Francesa</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.1/underscore-min.js"></script>
-    <script src="../Ejercicios_Funciones/ejercicio_4.js"></script> <!-- Incluyendo tu archivo JavaScript -->
+    <script src="./ejercicio_1.js"></script> <!-- Incluyendo tu archivo JavaScript -->
 </head>
 <body>
     
