--- a/Diseño Interfaces Web/Evaluable_Interfaz/producto.html
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/producto.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="productos-page">
+    <header>
+        <h1>Tienda de vinos Gourmet Afán de Rivera & Family</h1>
+        <nav><h2>Ribera del Duero</h2></nav>
+    </header>
+</div>
+<div class="pago">
+    <div class="pago-texto">
+        <h2>Ribera del Duero Selección</h2>
+        <p><b>DO RIBERA DEL DUERO</b><br>
+            <b>VARIEDADES:</b> 79% Tinto fino, 12% Cabernet sauvignon, 9% Merlot<br>
+            <b>CULTIVO:</b> Viñedos plantados entre 1988 y 2011.<br>
+            <b>CRIANZA:</b> 16 meses en barricas de roble francés 40% y americano 60%.<br>
+            <b>TIPO DE ROBLE:</b> Francés y americano.<br>
+            <b>NOTAS DE CATA:</b> Rojo púrpura con ribetes del mismo color. Nariz con notas de frutas rojas frescas, lácteos, notas balsámicas y especiados dulces. 
+            Una boca sabrosa, especiada, elegante, amplia. Equilibrada y con excelente acidez.
+            <b>PRECIO : 35€ </b>
+        </p>
+    </div>
+    <img src="./pago_carraovejas.jpg" alt="Pago Carraovejas">
+</div>
+
+<div class="boton-container">
+    <button onclick="Agregar()">Agregar al carrito</button>
+</div>
+
+
+<footer>
+    <p>&copy; 2024 Afán de Rivera & Family. Todos los derechos reservados.</p><br>
+    <p>
+      <a href="./politicaprivacidad.html" target="_blank">Leer políticas de privacidad</a> | 
+      <a href="./politicadecookies.html" target="_blank">Leer política de cookies</a> |
+      <a href="./avisolegal.html" target="_blank">Aviso Legal</a>
+      
+  </p>
+  </footer>
+
 </body>
+
 </html>
