--- a/Diseño Interfaces Web/Evaluable_Interfaz/contacto.html
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/contacto.html
@@ -29,6 +29,8 @@
 
         <p>Comentarios</p>
         <textarea id="comentarios" required></textarea>
+
+        <button onclick="Enviar">Enviar</button>
       </form>
     </div>
 
