--- a/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/tapete.html
+++ b/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/tapete.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=2.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=3.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=4.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./estilo.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Juego Black Jack</title>
   </head>
   <header>
@@ -11,24 +26,26 @@
   </header>
   <body>
     <div class="Juego-container" id="juego">
+      <!-- Al final no voy a cambiar ya los container con boot xq tengo el css y todo -->
       <div class="banca" id="banca">
         <h3>Banca</h3>
 
         <div class="cartas" id="cartas"></div>
       </div>
-
-      <div class="resultados">
+      <div class="cabecera-resultados">
         <h3>Resultados</h3>
+        <div class="resultados"></div>
       </div>
-
       <div class="jugador">
         <h3>Jugador</h3>
 
         <div class="jugada" id="jugada"></div>
 
         <div class="botones">
-          <button id="pedirCarta">Pedir Carta</button>
-          <button id="plantarse">Plantarse</button>
+          <button type="button" class="boton" id="pedirCarta">
+            Pedir Carta
+          </button>
+          <button type="button" class="boton" id="plantarse">Plantarse</button>
         </div>
       </div>
     </div>
