--- a/Diseño Interfaces Web/Evaluable_Interfaz/contacto.html
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/contacto.html
@@ -34,6 +34,9 @@
       </form>
     </div>
 
+    <div class="btn-container">
+      <a href="index.html" class="btn-formulario">Volver al inicio</a>
+    </div>
     <footer>
       <p>&copy; 2024 Afán de Rivera & Family. Todos los derechos reservados.</p>
       <br />
