--- a/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/tapete.html
+++ b/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/tapete.html
@@ -35,6 +35,7 @@
       <div class="cabecera-resultados">
         <h3>Resultados</h3>
         <div class="resultados"></div>
+        <button onclick="reiniciarPagina()">Volver a Jugar</button>
       </div>
       <div class="jugador">
         <h3>Jugador</h3>
