--- a/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Gestión Tareas</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main class="container">
+      <div class="row">
+        <!-- Columna izquierda -->
+        <div class="col-md-6">
+          <h2>Introducción de Datos</h2>
+          <div class="mb-3"> <!-- damos margen -->
+            <label for="nombre" class="form-label">Nombre tarea</label>
+            <input type="text" id="nombre" class="form-control" />
+          </div>
+          <div class="mb-3">
+            <label for="descripcion" class="form-label">Descripción tarea</label>
+            <input type="text" id="descripcion" class="form-control" />
+          </div>
+          <div class="mb-3">
+            <label for="prioridad" class="form-label">Prioridad</label>
+            <select class="form-select" id="prioridad">
+              <option value="2" selected>Alta</option>
+              <option value="3">Media</option>
+              <option value="4">Baja</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="fecha" class="form-label">Fecha tarea</label>
+            <input type="date" id="fecha" class="form-control" />
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="checkInput" />
+            <label class="form-check-label" for="checkInput">Prioritaria</label>
+          </div>
+          <button id="btnAgregar" class="btn btn-primary">Agregar</button>
+        </div>
+
+        <!-- Columna derecha-->
+        <div class="col-md-5">
+          <h2>Resultados de Búsqueda</h2>
+          <div class="mb-3">
+            <label for="filtrar" class="form-label">Filtrar por prioridad</label>
+            <select class="form-select" id="filtrar">
+              <option value="1" selected>Todas</option>
+              <option value="2">Alta</option>
+              <option value="3">Media</option>
+              <option value="4">Baja</option>
+            </select>
+          </div>
+        </div>
+      </div>
+        <!-- Sección dinámica de tareas -->
+        <div class="mt-5">
+          <h2>Tareas</h2>
+          <div id="tareas" class="row g-3"></div>
+        </div>
+    </main>
+    <script src="./Utils/js/tareas.js"></script>
+    <script src="./Utils/js/js.js"></script>
+  </body>
 </html>
+
+
