ejercicio tarea logica completa, falta css

--- a/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
@@ -48,8 +48,9 @@
             <input type="date" id="fecha" class="form-control" />
           </div>
           <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="checkInput" />
             <label class="form-check-label" for="checkInput">Prioritaria</label>
+            <input type="checkbox" class="form-check-input" id="checkInput" />
+            
           </div>
           <button id="btnAgregar" class="btn btn-primary">Agregar</button>
         </div>
@@ -59,7 +60,7 @@
           <h2>Resultados de Búsqueda</h2>
           <div class="mb-3">
             <label for="filtrar" class="form-label">Filtrar por prioridad</label>
-            <select class="form-select" id="filtrar">
+            <select class="form-select" id="filtroSelect">
               <option value="1" selected>Todas</option>
               <option value="2">Alta</option>
               <option value="3">Media</option>
