--- a/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
@@ -36,8 +36,8 @@
               <select class="form-select" id="filtroPrecio">
                 <option value="1">Menos de 10€</option>
                 <option value="2">De 10€ a 40€</option>
-                <option value="3">Más de 50€</option>
-                <option value="4">Todos los precios</option>
+                <option value="3">Más de 40€</option>
+                <option value="4" selected>Todos los precios</option>
               </select>
             </div>
             <!-- Filtro por Categoría -->
@@ -49,7 +49,7 @@
                 <option value="F">Fragrances</option>
                 <option value="FF">Furniture</option>
                 <option value="G">Groceries</option>
-                <option value="A">Todas las Categorías</option>
+                <option value="A" selected>Todas las Categorías</option>
               </select>
               <!-- Botón Agregar -->
               <button id="btnFiltrar" class="btn btn-primary w-100">Filtrar</button>
