--- a/Diseño Interfaces Web/ActividadUT3/ejercicio.html
+++ b/Diseño Interfaces Web/ActividadUT3/ejercicio.html
@@ -29,31 +29,37 @@
         </nav>
         <main >
           <img src="img/img1.jpg" class="foto1"/>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure harum
-            dolore expedita recusandae omnis obcaecati praesentium numquam,
-            labore ad libero placeat saepe nemo possimus. Eligendi, magni culpa?
-            Voluptate, eligendi eum.
+          <p class="texto-foto1">
+            Gran Via de Madrid, la calle más concurrida de toda España, 
+            un gran centro neuralgico de actividad, donde concurren multitud de 
+            culturas
           </p>
         </main>
 
         <article class="container-foto2">
           <img src="img/img2.jpg" / class="foto2">
-          <h2>Lorem ipsum dolor sit amet consectetur</h2>
+          <h2>Gran Via de Madrid, la calle más concurrida de toda España, 
+            un gran centro neuralgico de actividad, donde concurren multitud 
+            de culturas</h2>
         </article>
       </div>
       <div class="articles">
         <article>
           <img src="img/img3.jpg" class="foto3"/>
-          <h2>orem ipsum dolor sit amet consectetur</h2>
+          <h2>La Plaza Mayor de Madrid, construida en el siglo XVII,
+             es uno de los lugares más emblemáticos de la capital española. 
+             </h2>
         </article>
         <article>
           <img src="img/img4.jpg" class="foto4"/>
-          <h2>orem ipsum dolor sit amet consectetur</h2>
+          <h2>El Palacio Real de Madrid es la residencia oficial de la Familia Real Española,
+             aunque actualmente solo se utiliza para ceremonias y actos oficiales.</h2>
         </article>
         <article>
           <img src="img/img5.jpg" class="foto5"/>
-          <h2>orem ipsum dolor sit amet consectetur</h2>
+          <h2>Gran Via de Madrid, la calle más concurrida de toda España, 
+            un gran centro neuralgico de actividad, donde concurren multitud 
+            de culturas</h2>
         </article>
       </div>
       <footer>
