--- a/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Notion_PracticaTareas/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Utils/css/estilos.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -70,7 +71,7 @@
         </div>
       </div>
         <!-- Sección dinámica de tareas -->
-        <div class="mt-5">
+        <div class="mt-5" id="tarea">
           <h2>Tareas</h2>
           <div id="tareas" class="row g-3"></div>
         </div>
