--- a/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Utils/css/estilos.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +31,7 @@
           <!-- Fila de Filtros -->
           <div class="row">
             <!-- Filtro por Precio -->
-            <div class="col-md-6">
+            <div class="col-md-6" id="precio">
               <h3>Precio</h3>
               <label for="filtroPrecio" class="form-label">Filtrar Precios</label>
               <select class="form-select" id="filtroPrecio">
@@ -73,6 +74,8 @@
     </main>
   
     <script src="./Utils/js/index.js"></script>
+    
+
   </body>
   
   
