--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Calculadora/index.html
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Calculadora/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="./Calculadora/Utils/css/style.css">
+    <link rel="stylesheet"  href="./Utils/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Calculadora</title>
 </head>
@@ -36,6 +36,6 @@
 </header>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./Calculadora/Utils/js/js.js"></script>
+<script src="./Utils/js/js.js"></script>
 </body>
 </html>
