--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio5_Red_Social_X/index.html
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio5_Red_Social_X/index.html
@@ -1,47 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Red Social X</title>
     <link rel="stylesheet" href="./Utils/css/styles.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
-</head>
-<body>
-    <div class="container mt-5">
-
-        <h1>Red Social X</h1>
-        <form id="form">
-
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container mt-5" id="negro">
+      <h1>Red Social X</h1>
+      <form id="form">
         <div class="row mb-4" id="row4">
-<div class="col-md-6">
-<label for="titulo" class="form-label"><b>Introducir el título</b></label>
-<input type="text" class="form-control" id="titulo" placeholder="Ponga el título" required>
-<button type="button" class="btn btn-primary" id="btn">Publicar</button>
-</div>
+          <div class="col-md-4">
+            <label for="titulo" class="form-label"
+              ><b>Introducir el título</b></label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="titulo"
+              placeholder="Ponga el título"
+              required
+            />
+            <button type="button" class="btn btn-primary" id="btn">
+              Publicar
+            </button>
+          </div>
 
-<div class="col-md-6">
-    <label for="tematica" class="form-label"><b>Introducir la temática</b></label>
-    <input type="text" class="form-control" id="tematica" placeholder="Ponga la temática" required>
-
-</div>
-
-
-
+          <div class="col-md-4">
+            <label for="tematica" class="form-label"
+              ><b>Introducir la temática</b></label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="tematica"
+              placeholder="Ponga la temática"
+              required
+            />
+          </div>
+          <div class="col-md-4">
+            <label for="categoria" class="form-label"><b>Categoria</b></label>
+            <select
+              class="form-select"
+              aria-label="Selecione una Categoria"
+              id="categoria"
+            >
+              <option selected>Elige una categoria</option>
+              <option value="Deporte">Deporte</option>
+              <option value="Politica">Política</option>
+              <option value="Cultura">Cultura</option>
+              <option value="Sanidad">Sanidad</option>
+              <option value="Economia">Economia</option>
+              <option value="Educacion">Educación</option>
+            </select>
+          </div>
         </div>
-        <div id="timeline" class="d-flex flex-column gap-3 bg-light p-3 rounded overflow-auto mt-4" style="max-height: 500px;">
-            <!-- Aquí se agregarán las cards -->
+        <div class="mb-3 text center">
+          <label for="filtrarTweets" class="form-label text-center d-block"
+            ><b>Filtrar Tweets</b></label
+          >
+          <select
+            class="form-select w-50 mx-auto"
+            aria-label="Selecione una Categoria"
+            id="filtrarCategoria"
+          >
+            <option selected>Elige una categoria</option>
+            <option value="Deporte">Deporte</option>
+            <option value="Politica">Política</option>
+            <option value="Cultura">Cultura</option>
+            <option value="Sanidad">Sanidad</option>
+            <option value="Economia">Economia</option>
+            <option value="Educacion">Educación</option>
+          </select>
         </div>
-    </form>
+        <div
+          id="timeline"
+          class="d-flex flex-column gap-3 bg-light p-3 rounded overflow-auto mt-4"
+          style="max-height: 500px"
+        >
+          <!-- Aquí se agregarán las cards -->
+        </div>
+      </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./Utils/js/index.js"></script> 
-</body>
+    <script src="./Utils/js/index2.js"></script>
+  </body>
 </html>
