--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio8_Asincronia/index.html
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio8_Asincronia/index.html
@@ -23,7 +23,7 @@
     <div class="container-md">
       <h1 class="mt-5 mb-5 text-center">Tienda Online</h1>
       <select class="form-select form-select-sm" id="filtrar">
-        <option selected>Filtrar</option>
+        <option selected>Filtrar Precio</option>
         <option value="1">Precio mínimo</option>
         <option value="2">Precio Maximo</option>
         <option value="3">Menos de 100€</option>
