php agenda acabado, solo falta darle algun estilo mas

--- a/Desarrollo Web en Entorno Servidor/U4T_Actividad1/index.html
+++ b/Desarrollo Web en Entorno Servidor/U4T_Actividad1/index.html
@@ -1,25 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +17,7 @@
     <div class="container">
 
         <h1 class="text-center mb-4 mt-4"  >Formulario Registro Agenda</h1>
-        <form action="ficherosDeTexto.php" method="post"  >
+        <form action="guardar_contacto.php" method="post"  >
 
         <div class="mb-3" id="formulario">
 
@@ -57,7 +35,7 @@
 
 
 
-<button type="submit" class="btn btn-info btn-lg" id="boton">Enviar</button>
+<button type="submit" class="btn btn-info btn-lg" id="boton">Guardar Contacto</button>
 
 
         </div>
@@ -71,6 +49,6 @@
 
 
     </div>
-    
+    <a href="index.php">Volver al Menú Principal</a>
 </body>
 </html>
