--- a/Desarrollo Web en Entorno Servidor/U4T_Actividad1/index.html
+++ b/Desarrollo Web en Entorno Servidor/U4T_Actividad1/index.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-
+<!-- clases de bootrap -->
     <div class="container">
 
         <h1 class="text-center mb-4 mt-4"  >Formulario Registro Agenda</h1>
