--- a/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
+++ b/Desarrollo Web en Entorno Cliente/Tema_4/Tienda_promesas/index.html
@@ -45,7 +45,7 @@
             <div class="col-md-6">
               <h3>Categoría</h3>
               <label for="filtroCategoria" class="form-label">Filtrar Categoría</label>
-              <select class="form-select mb-3" id="filtroCategoria">
+              <select class="form-select mb-3 p-3" id="filtroCategoria">
                 <option value="B">Beauty</option>
                 <option value="F">Fragrances</option>
                 <option value="FF">Furniture</option>
