--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio9_Trivial/index.html
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio9_Trivial/index.html
@@ -1,25 +1,34 @@
-<!DOCTYPE html>
+  
+</div><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Trivial</title>
-    
+    <!-- Enlace a Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Enlace a SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css" rel="stylesheet">
+    <!-- Enlace a tu archivo CSS personalizado -->
+    <link href="./Utils/css/styles.css" rel="stylesheet">
 </head>
 <body>
-
-
     <div class="container-md">
-<h1 class="mt-5 mb-5 text-center">Trivial Pursuit</h1>
+        <h1 class="mt-5 mb-5 text-center">Trivial Pursuit</h1>
+        <div class="row" id="tapete"></div>
+    </div>
 
+    <!-- Enlace a jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Enlace a Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <!-- Enlace a SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.all.min.js"></script>
+    <!-- Enlace a tu archivo JS personalizado -->
+    <script src="./Utils/js/index.js"></script>
+</body>
+</html>
 
-<div class="row" id="tapete">
-
-
-
-
-    
-</div>
 
 
 
