--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/index.html
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/index.html
@@ -32,13 +32,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link text-white fs-4" href="#">Inicio</a>
+                <a class="nav-link text-white fs-4" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fs-4" href="#">Contacto</a>
+                <a class="nav-link text-white fs-4" href="">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fs-4" href="#">Registro</a>
+                <a class="nav-link text-white fs-4" href="formulario_registro.html">Registro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white fs-4" href="login.html">Login</a>
               </li>
             </ul>
           </div>
