--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/alta_Inmuebles.html
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/alta_Inmuebles.html
@@ -61,7 +61,7 @@
       <!-- Formulario -->
       <div class="form-group formulario1">
         <div class="contenedor-principal">
-          <form class="form" action="registro.php" method="post">
+          <form class="form" action="dardeAlta.php" method="POST" enctype="multipart/form-data">
             <table class="table">
               <tr>
                 <!-- Primera columna: 5 campos -->
