inmobiliaria, darde alta ,buscar, comprar, pintar piso con img, formularios , menus usuario

--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/alta_Inmuebles.html
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/alta_Inmuebles.html
@@ -13,6 +13,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/png" href="logoG.jpeg" sizes="32x32">
 
     <link rel="stylesheet" href="/Inmobiliaria/Utils/css/style.css" />
     <title>Quality Inmobiliaria</title>
