evaluable interfaz con bootstrap y avances app inmobiliaria

--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/login.html
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/login.html
@@ -27,6 +27,28 @@
       >
         Quality Inmobiliaria
       </h1>
+
+      <nav class="navbar navbar-expand-lg navbar-dark  py-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/Inmobiliaria/letra-q.png" alt="Logo" width="70">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link text-white fs-4" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white fs-4" href="">Contacto</a>
+              </li>
+           
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="form-group formulario">
         <form class="form" action="login.php" method="post">
           <label for="correo" class="form-label">Correo electrónico: </label>
