--- a/Diseño Interfaces Web/Ejercicio_Presencial_London/Ejercicio_Completo - Enunciado.html
+++ b/Diseño Interfaces Web/Ejercicio_Presencial_London/Ejercicio_Completo - Enunciado.html
@@ -26,29 +26,113 @@
       </p>
     </nav>
 
-    <div class="container">
+    <div class="containerTotal">
+      <div class="container">
+        <div class="imagen1">
+          <a href="https://www.britishmuseum.org/"
+            ><img
+              src="british-museum.jpg"
+              alt="The British Museum"
+              title="The British Museum"
+              width="266"
+              height="200"
+          /></a>
+        </div>
 
-    <div class="imagen">
-      <a href="https://www.britishmuseum.org/"
-        ><img
-          src="british-museum.jpg"
-          alt="The British Museum"
-          title="The British Museum"
-          width="266"
-          height="200"
-      /></a>
+        <div class="contenido">
+          <h3>The British Museum</h3>
+
+          <p class="british">
+            El Museo Británico se fundó en 1735 y alberga antigüedades
+            procedentes de Egipto, Roma, Grecia, Oriente Próximo y Asia. El
+            edificio se empezó a construir en 1824, fue diseñado por Robert
+            Smirke y hasta 1997 también era la sede de la Biblioteca Británica.
+          </p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="imagen2">
+          <a href="https://www.tate.org.uk/visit/tate-britain"
+            ><img
+              src="tate-britain.jpg"
+              alt="Tate Britain"
+              title="Tate Britain"
+              width="250"
+              height="200"
+          /></a>
+        </div>
+
+        <div class="contenido">
+          <h3>Tate Britain</h3>
+
+          <p class="british">
+            En 1897 se abrió al público, al sur de Westminster, la Galería
+            Nacional de Arte Británico, gracias al dinero aportado por Henry
+            Tate, magnate del azúcar y coleccionista. En 1932 el museo pasó a
+            llamarse Tate Gallery. En 2000 el museo inaguró la Tate Modern, una
+            nueva sede situada frente a la Catedral de San Pablo. La Tate
+            Gallery pasó a llamarse Tate Britain y alberga importantes
+            colecciones como las dedicadas a William Turner o a Henry Moore.
+          </p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="imagen3">
+          <a href="https://www.nationalgallery.org.uk/"
+            ><img
+              src="trafalgar-square.jpg"
+              alt="The National Gallery"
+              title="The National Gallery"
+              width="300"
+              height="200"
+          /></a>
+        </div>
+
+        <div class="contenido">
+          <h3>The National Gallery</h3>
+
+          <p class="british">
+            La National Gallery alberga la más importante colección inglesa de
+            pintura de los siglos XV al XIX. Fue creada en 1824 a partir de
+            donaciones y compras a coleccionistas particulares y desde 1838
+            tiene su sede en Trafalgar Square. Esta plaza está dedicada a una de
+            las victorias más importantes de la Armada inglesa, la batalla de
+            Trafalgar de 1805, frente a las flotas francesa y española. En el
+            centro de la plaza se encuentra la columna de Nelson, que dirigió la
+            flota inglesa en esa batalla y falleció en ella.
+          </p>
+        </div>
+      </div>
+
+      <div class="container2">
+        <div class="imagen2">
+          <a href="https://www.nhm.ac.uk/"
+            ><img
+              src="natural-history.jpg"
+              alt="Natural History Museum"
+              title="National History Museum"
+              width="266"
+              height="200"
+          /></a>
+        </div>
+
+        <div class="contenido">
+          <h3>Natural History Museum</h3>
+
+          <p class="british">
+            En el siglo XVII el Museo Británico albergaba colecciones de
+            animales y plantas, pero en desastrosas condiciones. Para resolver
+            la situación, en 1881 se abrió la sede actual del Museo de Historia
+            Natural, un magnífico edificio de ladrillo de terracota,
+            característico de la época victoriana. En sus inmediaciones se
+            encuentran también el museo de la Ciencia, el museo de Arte y
+            Diseño, varias reales academias de arte y ciencia y la famosa sala
+            de conciertos Royal Albert Hall.
+          </p>
+        </div>
+      </div>
     </div>
-
-    <div class="contenido">
-      <h2>The British Museum</h2>
-
-      <p>
-        El Museo Británico se fundó en 1735 y alberga antigüedades procedentes
-        de Egipto, Roma, Grecia, Oriente Próximo y Asia. El edificio se empezó a
-        construir en 1824, fue diseñado por Robert Smirke y hasta 1997 también
-        era la sede de la Biblioteca Británica.
-      </p>
-    </div>
-  </div>
   </body>
 </html>
