--- a/Diseño Interfaces Web/Evaluable_Interfaz/index.html
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/index.html
@@ -22,7 +22,7 @@
    <img src="./familia_vino.png" alt="Familia vino">
 </div>
 
-<footer>
+<footer class="text-center mt-5 mb-5">
   <p>&copy; 2024 Afán de Rivera & Family. Todos los derechos reservados.</p><br>
   <p>
     <a href="./politicaprivacidad.html" target="_blank">Leer políticas de privacidad</a> | 
