--- a/Diseño Interfaces Web/Evaluable_Interfaz/producto.html
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/producto.html
@@ -13,24 +13,35 @@
         <nav><h2>Ribera del Duero</h2></nav>
     </header>
 </div>
-<div class="pago">
-    <div class="pago-texto">
-        <h2>Ribera del Duero Selección</h2>
-        <p><b>DO RIBERA DEL DUERO</b><br>
-            <b>VARIEDADES:</b> 79% Tinto fino, 12% Cabernet sauvignon, 9% Merlot<br>
-            <b>CULTIVO:</b> Viñedos plantados entre 1988 y 2011.<br>
-            <b>CRIANZA:</b> 16 meses en barricas de roble francés 40% y americano 60%.<br>
-            <b>TIPO DE ROBLE:</b> Francés y americano.<br>
-            <b>NOTAS DE CATA:</b> Rojo púrpura con ribetes del mismo color. Nariz con notas de frutas rojas frescas, lácteos, notas balsámicas y especiados dulces. 
-            Una boca sabrosa, especiada, elegante, amplia. Equilibrada y con excelente acidez.
-            <b>PRECIO : 35€ </b>
-        </p>
+<div class="container mt-5">
+    <div class="card mb-4 shadow-sm">
+        <div class="row g-0">
+            <!-- Imagen -->
+            <div class="col-md-4">
+                <img src="./pago_carraovejas.jpg" class="img-fluid rounded-start" alt="Pago Carraovejas">
+            </div>
+            <!-- Texto -->
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h2 class="card-title">Ribera del Duero Selección</h2>
+                    <p class="card-text">
+                        <strong>DO RIBERA DEL DUERO</strong><br>
+                        <strong>VARIEDADES:</strong> 79% Tinto fino, 12% Cabernet sauvignon, 9% Merlot<br>
+                        <strong>CULTIVO:</strong> Viñedos plantados entre 1988 y 2011.<br>
+                        <strong>CRIANZA:</strong> 16 meses en barricas de roble francés 40% y americano 60%.<br>
+                        <strong>TIPO DE ROBLE:</strong> Francés y americano.<br>
+                        <strong>NOTAS DE CATA:</strong> Rojo púrpura con ribetes del mismo color. Nariz con notas de frutas rojas frescas, lácteos, notas balsámicas y especiados dulces. 
+                        Una boca sabrosa, especiada, elegante, amplia. Equilibrada y con excelente acidez.<br>
+                        <strong>PRECIO: 35€</strong>
+                    </p>
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-primary" onclick="Agregar()">Agregar al carrito</button>
+                        <a href="index.html" class="btn btn-outline-secondary">Volver al inicio</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <img src="./pago_carraovejas.jpg" alt="Pago Carraovejas">
-</div>
-
-<div class="boton-container">
-    <button onclick="Agregar()">Agregar al carrito</button><a href="index.html" class="btn-volver">Volver al inicio</a>
 </div>
 
 
