--- a/Desarrollo Web en Entorno Cliente/Evaluable_2_Productos/index.html
+++ b/Desarrollo Web en Entorno Cliente/Evaluable_2_Productos/index.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
     />
 
-    <link rel="icon" type="image/webp" href="/Productos/logo2.webp" />
-    <link rel="stylesheet" href="/Productos/Utils/css/style.css" />
+    <link rel="icon" type="image/webp" href="/Evaluable_2_Productos/logo.webp" />
+    <link rel="stylesheet" href="/Evaluable_2_Productos/Utils/css/style.css" />
   </head>
   <body class="bg-light">
     <h1 class="text-center mb-4 mt-4">Radiant Beauty</h1>
@@ -106,6 +106,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/Productos/Utils/js/index.js"></script>
+    <script src="/Evaluable_2_Productos/Utils/js/index.js"></script>
   </body>
 </html>
