--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio3_Temperatura/index.html
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio3_Temperatura/index.html
@@ -13,7 +13,7 @@
     />
 </head>
 <body>
-<h1>Conversor Temperatura</h1>
+<h1 class="text-center p-5">Conversor Temperatura</h1>
     <div class="container">
 
 
